some changes on contects

--- a/index.html
+++ b/index.html
@@ -579,14 +579,14 @@
                   <p>
                     <span class="card-title"
                       ><a href="http://upenn.edu" class="teal-text hoverline"
-                        >University of Pennsylvania</a
+                        >IES College of Technology(RGPV University)</a
                       ></span
                     >
                   </p>
-                  <p class="brown-text">Philadelphia, PA</p>
+                  <p class="brown-text">Bhopal,(M.P),India</p>
                   <ul>
-                    <li>B.A. in Psychology</li>
-                    <li>Summa Cum Laude</li>
+                    <li>Bachelor of Engineering</li>
+                    <li>Mechanical</li>
                   </ul>
                 </div>
               </div>
@@ -597,13 +597,13 @@
                   <p>
                     <span class="card-title"
                       ><a href="http://www.gwu.edu" class="teal-text hoverline"
-                        >George Washington University</a
+                        >SMD College Jalalpur</a
                       ></span
                     >
                   </p>
-                  <p class="brown-text">Washington, D.C.</p>
+                  <p class="brown-text">Gopalganj, Bihar</p>
                   <ul>
-                    <li>B.A. candidate</li>
+                    <li>Intermediate</li>
                   </ul>
                 </div>
               </div>
@@ -617,51 +617,51 @@
         <div class="container">
           <p>
             <a
-              aria-label="Email Andrew"
-              href="mailto:andrew@andrewborstein.com"
+              aria-label="Email Sujeet"
+              href="mailto:sujeetkumarshah96@gmail.com"
               data-position="top"
-              data-tooltip="Email Andrew"
+              data-tooltip="Email Sujeet"
               class="btn-floating btn-large waves-effect waves-light brown tooltipped"
               ><i class="fa fa-envelope"></i
               ><a
-                aria-label="Email Andrew"
-                href="mailto:andrew@andrewborstein.com"
+                aria-label="Email Sujeet"
+                href="mailto:sujeetkumarshah96@gmail.com"
                 class="hoverline"
-                >andrew@andrewborstein.com</a
+                >sujeetkumarshah96@gmail.com</a
               ></a
             >
           </p>
           <p>
             <a
               aria-label="View Andrew on GitHub"
-              href="http://github.com/andrewborstein"
+              href="https://github.com/sujeetgithubweb"
               target="_blank"
               data-position="top"
-              data-tooltip="View Andrew on GitHub"
+              data-tooltip="View Sujeet on GitHub"
               class="btn-floating btn-large waves-effect waves-light brown tooltipped"
               ><i class="fa fa-github"></i
               ><a
-                aria-label="Andrew on Github"
-                href="http://github.com/andrewborstein"
+                aria-label="Sujeet on Github"
+                href="https://github.com/sujeetgithubweb"
                 class="hoverline"
-                >github.com/andrewborstein</a
+                >https://github.com/sujeetgithubweb</a
               ></a
             >
           </p>
           <p>
             <a
-              aria-label="View Andrew on LinkedIn"
-              href="http://linkedin.com/in/andrewborstein"
+              aria-label="View Sujeet on LinkedIn"
+              href="https://www.linkedin.com/in/sujeetkumar96/"
               target="_blank"
               data-position="top"
-              data-tooltip="View Andrew on LinkedIn"
+              data-tooltip="View Sujeet on LinkedIn"
               class="btn-floating btn-large waves-effect waves-light brown tooltipped"
               ><i class="fa fa-linkedin"></i
               ><a
-                aria-label="Andrew on LinkedIn"
-                href="http://linkedin.com/in/andrewborstein"
+                aria-label="Sujeet on LinkedIn"
+                href="https://www.linkedin.com/in/sujeetkumar96/"
                 class="hoverline"
-                >linkedin.com/in/andrewborstein</a
+                >linkedin.com/in/sujeetkumar96</a
               ></a
             >
           </p>
